tests/errors/keywords.c
int main(){
    int x = 2;
    int typedef = 3;
    return 0;
}